segregation function completed